# ohos-rust-demo

./: .gitmodules  Readme.md  build-profile.json5  oh-package.json5
.github/workflows/: ohos.yml
entry/: oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/rust_napi_demo/: Cargo.toml
entry/src/main/cpp/rust_napi_demo/src/: lib.rs
entry/src/main/cpp/types/librust_napi_demo/: oh-package.json5
entry/src/main/ets/pages/: Index.ets
